remove info from appsettings

--- a/ConsoleApp1/appsettings.json
+++ b/ConsoleApp1/appsettings.json
@@ -1,13 +1,13 @@
 {
   "AppSettings": {
     "AzureServiceBus": {
-      "QueueConnectionString": "Endpoint=sb://service-bus-core.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=raIa+PGzMq5IqbgL3cELsHzJ/wTFY33XSgBrvt8mZ5Y=",
-      "QueueName": "messagequeue"
+      "QueueConnectionString": "Queue connection string here",
+      "QueueName": "Queue name here"
     },
     "EmailService": {
-      "Sender": "dotnetcore5",
-      "Subject": "Azure Bus Service",
-      "Url": "http://10.111.13.47:7002/utilityservice/v1/emailservice"
+      "Sender": "Email sender",
+      "Subject": "Email subject",
+      "Url": "Email service url"
     }
   }
 }
