--- a/SampleAzureBusService/appsettings.json
+++ b/SampleAzureBusService/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AzureServiceBus": {
-    "QueueConnectionString": "Endpoint=sb://service-bus-core.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=raIa+PGzMq5IqbgL3cELsHzJ/wTFY33XSgBrvt8mZ5Y=",
-    "QueueName": "messagequeue"
+    "QueueConnectionString": "Queue connection string here",
+    "QueueName": "Queue name here"
   },
   "AllowedHosts": "*"
 }
